feat: 토큰 갱신, 핀포인트 apm 추가
