# internal/router/auth.go
@@ -6,5 +6,6 @@ func (c *container) RegisterAuthRoute() {
 		r.Post("/signup", c.handler.auth.SignUp)
 		r.Post("/signin", c.handler.auth.SignIn)
 		r.Post("/signout", c.AuthMiddleware(c.handler.auth.SignOut)...)
+		r.Post("/refresh", c.handler.auth.RefreshToken)
 	}
 }
